--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-router": "^0.2.0",
     "firebase": "^9.10.0",
     "google-auth-library": "^8.6.0",
+    "grid": "^4.10.8",
     "headers": "^0.9.6",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
