--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.11",
     "@react-oauth/google": "^0.2.8",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +26,9 @@
     "react-scripts": "5.0.1",
     "react-use-url": "^1.0.5",
     "react-youtube": "^10.0.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "router": "^1.3.7",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
